[project]
name = "cypherpunk"
version = "0.1.0"
description = "A cryptography adventure game."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "nilpoint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
nilpoint = { path = "../nilpoint_core", editable = true }

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
